@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,14 +23,14 @@
 
 /*
  * @test
+ * @enablePreview
  * @modules java.base/jdk.internal.ref
- *          jdk.incubator.foreign/jdk.incubator.foreign
  * @run testng/othervm TestResourceScope
  */
 
 import java.lang.ref.Cleaner;
 
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.ResourceScope;
 import jdk.internal.ref.CleanerFactory;
 
 import org.testng.annotations.DataProvider;
@@ -39,7 +39,6 @@ import static org.testng.Assert.*;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
