@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,23 +24,24 @@
 
 /*
  * @test
+ * @enablePreview
  * @run testng TestSegmentCopy
  */
 
-import jdk.incubator.foreign.MemoryHandles;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.ValueLayout;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
-
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.ResourceScope;
+import java.lang.foreign.ValueLayout;
+import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.IntFunction;
 
-import static jdk.incubator.foreign.ValueLayout.JAVA_BYTE;
+import org.testng.annotations.DataProvider;
+import org.testng.annotations.Test;
+
+import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 import static org.testng.Assert.*;
 
 public class TestSegmentCopy {
@@ -96,7 +97,7 @@ public class TestSegmentCopy {
 
     enum Type {
         // Byte
-        BYTE(byte.class, ValueLayout.JAVA_BYTE, i -> (byte)i),
+        BYTE(byte.class, JAVA_BYTE, i -> (byte)i),
         //LE
         SHORT_LE(short.class, ValueLayout.JAVA_SHORT.withOrder(ByteOrder.LITTLE_ENDIAN), i -> (short)i),
         CHAR_LE(char.class, ValueLayout.JAVA_CHAR.withOrder(ByteOrder.LITTLE_ENDIAN), i -> (char)i),
@@ -128,7 +129,7 @@ public class TestSegmentCopy {
         }
 
         VarHandle handle() {
-            return MemoryHandles.varHandle(layout);
+            return MethodHandles.memoryAccessVarHandle(layout);
         }
 
         void set(SegmentSlice slice, int index, int val) {
